hphp/hack/test/typecheck/ffp/function_async_partial.php
<?hh // partial

// In partial mode, we can skip the type parameters.
async function foo(): Awaitable {}
